After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 626875 - Fix handling of --composite and --no-composite command line options
Fix handling of --composite and --no-composite command line options
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
git master
Other Linux
: Normal minor
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2010-08-13 19:54 UTC by Nickolas Lloyd
Modified: 2011-01-04 16:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[RFQ] Fix --no-composite and --composite cli options (1.42 KB, patch)
2010-08-13 19:54 UTC, Nickolas Lloyd
none Details | Review
Remove ability to turn compositing off in mutter (5.94 KB, patch)
2010-08-17 17:48 UTC, Nickolas Lloyd
committed Details | Review

Description Nickolas Lloyd 2010-08-13 19:54:52 UTC
Created attachment 167834 [details] [review]
[RFQ] Fix --no-composite and --composite cli options

Currently these two command line options just set the corresponding GConf key, but they don't actually take immediate effect.  This is, as I see it, not the desired effect.  It is also questionable whether the desired effect is to set the GConf key in the first place, and hence affect subsequent sessions, or to just make the setting a one-time thing.  This patch at least takes care of the first problem.  In addition, quite a lot of clutter initialization takes place before these two command line options are even looked at.  If compositing is to be disabled, would it not make sense to completely skip clutter initialization?  Proposed patch attached.
Comment 1 Nickolas Lloyd 2010-08-13 20:01:20 UTC
sorry for the extra noise, but I (feeling stupidly) take back the comment about clutter initialization.  The 'initialization' is minimal and probably not worth looking at...
Comment 2 Owen Taylor 2010-08-16 18:11:48 UTC
Does Mutter work non-composited? We haven't tested that for a very long time and it would sort of surprise me if it did without more work.

Then we have to decide if we *want* it to work. My opinion is basically no - we chose to fork Mutter off from Metacity so we could change stuff and rely on compositing. If we are trying to make Mutter do everything that Metacity does and more, than there was no point in the fork. 

[ And we already removed reduced_resources_mode so Mutter doesn't work as a drop-in replacement for Metacity. ]

If Tomas is in agreement with that line of thinking, I'd say that the only patches we'd want here are patches to remove the command line options and GConf keys.
Comment 3 Nickolas Lloyd 2010-08-16 20:11:33 UTC
That's a good point.  I was under the impression that Mutter was to be a replacement for Metacity, in which case this patch would make sense.  If that's /not/ the case, then yes, removing the no-composite mode would make the most sense.  It does, however, work in that mode just fine.  I've been using Mutter as a wm for gnome (not gnome-shell) for a while now, and turning off compositing has been desirable for me when I want to run openGL intensive apps.

If the decision is to remove --no-composite, I'd be happy to submit the appropriate patch, unless you or someone else wants to take care of it.
Comment 4 Nickolas Lloyd 2010-08-17 17:48:55 UTC
Created attachment 168119 [details] [review]
Remove ability to turn compositing off in mutter

If the decision is made to remove the no-composite feature, here is a proposed patch to do so.  Thoughts?
Comment 5 Owen Taylor 2010-08-18 17:50:32 UTC
Review of attachment 168119 [details] [review]:

Patch looks good to me. I'd like to get feedback from Tomas before we land this.
Comment 6 Nickolas Lloyd 2010-09-20 02:07:25 UTC
*ping*
Tomas, it looks like this one depends on you you ;)
Comment 7 Owen Taylor 2011-01-04 16:56:14 UTC
Patch rebased to current master and pushed.